--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -4,6 +4,40 @@ page{
   height: 100%;
 }
 
+.navigateBar{
+  flex: none;
+  display: flex;
+  font-size: 35rpx;
+  background: #3CA0DC;
+  color: white;
+}
+
+.navigateBar .item{
+  position: relative;
+  flex: auto;
+  text-align: center;
+  line-height: 80rpx;
+}
+
+.navigateBar .item.active{
+  color: #fff;
+  font-weight: bold;
+  font-size: 38rpx;
+}
+.navigateBar .item.active:after{
+  content: "";
+  display: block;
+  position: absolute;
+  margin: 0rpx 35rpx 8rpx;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 5rpx;
+  opacity: 0.7;
+  border-radius: 10%;
+  background: #fff;
+}
+
 .navbar{
   flex: none;
   display: flex;
@@ -37,12 +71,6 @@ page{
   border-radius: 10%;
   background: #fff;
 }
-
-/* .bottom-navbar{
-  height: 10rpx;
-  width: 100%;
-  background:rgb(220, 156, 60);
-} */
 
 .bg{
   height: 140rpx;
